--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
         <h1>Bienvenido al Colegio Americano de Barranquilla</h1>
         <p>Por favor elige la opción:</p>
-        <a href="login.php" class="button">Ingreso</a>
+        <a href="/localizador/login.php" class="button">Ingreso</a>
         
     </div>
 </body>
